DOC, CHORE: adjusted tutorials

--- a/tutorials/2_absorption_graphene.ipynb
+++ b/tutorials/2_absorption_graphene.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "bebc18af",
+   "id": "7651eef4",
    "metadata": {},
    "source": [
     "## Absorption spectrum of graphene nanoflakes\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1ada250c",
+   "id": "a0a17b23",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8f4c3d68",
+   "id": "ad23158a",
    "metadata": {},
    "source": [
     "We now define the electric field as an x-polarized pulse of frequency peaking at 2, with fwhm of 0.5."
@@ -66,7 +66,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5ffe2544",
+   "id": "a76c8db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e09abf36",
+   "id": "82d3dc89",
    "metadata": {},
    "source": [
     "We assume the structure looses energy relaxing across all channels with a rate of 0.1"
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a602183",
+   "id": "d41926f4",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,7 +99,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "483ee5ac",
+   "id": "f8950d48",
    "metadata": {},
    "source": [
     "We propagate the structure in time. The function evolution returns a tuple. First is a new stack with its initial state given by the last state in the time evolution.  Second is a solution object provided by the diffrax library GRANAD uses for solving the underlying ODE with Dormand-Prince's 5/4 method and a PID controller for adapting the step size. It contains the density matrices, accessible via its attribute soltuion.ys. The saveat argument controls at which times we want to sample the density matrix. Here, we take it at all times, but for larger structures, a more sparse sampling grid is appropriate."
@@ -108,25 +108,25 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12063f78",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
+   "id": "93c422ba",
+   "metadata": {},
    "outputs": [],
    "source": [
-    "time_axis = jnp.linspace(0, 10, 10**4) \n",
+    "time_axis = jnp.linspace(0, 10, int(1e6))\n",
     "new_stack, sol = granad.evolution(\n",
     "    stack,\n",
     "    time_axis,\n",
     "    field_func,\n",
     "    loss_function,\n",
-    "    saveat = time_axis\n",
+    "    saveat = saveat,\n",
+    "    atol = 1e-10,\n",
+    "    rtol = 1e-10\n",
     ")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "f9129b69",
+   "id": "8783b87c",
    "metadata": {},
    "source": [
     "Unpack the solutions. sol.ys contains the density matrices stacked into an array of shape T x N x N, where T is the number of timesteps, N is the number of orbitals. We only need the diagonal elements for the occupation numbers."
@@ -135,30 +135,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b625cb04",
+   "id": "2a21a16a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "occupations = jnp.diagonal(sol.ys, axis1=1, axis2=2)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "ec0fd1e8",
-   "metadata": {},
-   "source": [
-    "We can also calculate the solution without diffrax with the previous solver, equivalent to first order Runge-Kutta"
+    "occupations_new = jnp.diagonal(sol.ys, axis1=1, axis2=2)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ccbbbcf0",
-   "metadata": {},
+   "id": "2449eb46",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
    "outputs": [],
    "source": [
-    "time_axis = jnp.linspace(0, 10, 10**4) \n",
-    "_, occ = granad.evolution_old(\n",
+    "# We can also calculate the solution without diffrax with the previous solver, equivalent to first order Runge-Kutta\n",
+    "_, occupations_old = granad.evolution_old(\n",
     "    stack,\n",
     "    time_axis,\n",
     "    field_func,\n",
@@ -169,7 +163,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "930ce55e",
+   "id": "839c723c",
    "metadata": {},
    "source": [
     "We now plot the absorption "
@@ -178,7 +172,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "dc1fde77",
+   "id": "86e122db",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -194,30 +188,34 @@
     "    )\n",
     "    return omega_axis, function_of_omega\n",
     "\n",
-    "\n",
     "# dipole moments in fourier space\n",
-    "dipole_moment = granad.induced_dipole_moment(stack, occupations)\n",
-    "omega_axis, dipole_omega = get_fourier_transform(time_axis, dipole_moment[:, 0])\n",
-    "dipole_moment_old = granad.induced_dipole_moment(stack, occ)\n",
-    "_, dipole_omega_old = get_fourier_transform(time_axis, dipole_moment[:, 0])\n",
+    "dipole_moment_new = granad.induced_dipole_moment(stack, occupations_new)\n",
+    "omega_axis_new, dipole_omega_new = get_fourier_transform(saveat, dipole_moment_new[:, 0])\n",
+    "dipole_moment_old = granad.induced_dipole_moment(stack, occupations_old)\n",
+    "omega_axis_old, dipole_omega_old = get_fourier_transform(time_axis, dipole_moment_old[:, 0])\n",
     "\n",
     "# we also need the x-component of the electric field as a single function\n",
     "electric_field = granad.electric_field(\n",
     "    amplitudes, frequency, stack.positions[0, :]\n",
+    ")(saveat)\n",
+    "_, field_omega_new = get_fourier_transform(saveat, electric_field[0])\n",
+    "\n",
+    "electric_field = granad.electric_field(\n",
+    "    amplitudes, frequency, stack.positions[0, :]\n",
     ")(time_axis)\n",
-    "_, field_omega = get_fourier_transform(time_axis, electric_field[0])\n",
+    "_, field_omega_old = get_fourier_transform(time_axis, electric_field[0])\n",
     "\n",
     "\n",
     "omega_max = 100\n",
     "component = 0\n",
     "# alpha = p / E\n",
-    "polarizability = dipole_omega / field_omega\n",
-    "polarizability_old = dipole_omega_old / field_omega\n",
+    "polarizability = dipole_omega_new / field_omega_new\n",
+    "polarizability_old = dipole_omega_old / field_omega_old\n",
     "# sigma ~ Im[alpha]\n",
-    "spectrum_old = -omega_axis[:omega_max] * np.imag(polarizability_old[:omega_max])\n",
-    "spectrum = -omega_axis[:omega_max] * np.imag(polarizability[:omega_max])\n",
-    "plt.plot(omega_axis[:omega_max], np.abs(spectrum_old) ** (1 / 2), label = 'old')\n",
-    "plt.plot(omega_axis[:omega_max], np.abs(spectrum) ** (1 / 2), '--', label = 'new')\n",
+    "spectrum_old = -omega_axis_old[:omega_max] * np.imag(polarizability_old[:omega_max])\n",
+    "spectrum = -omega_axis_new[:omega_max] * np.imag(polarizability[:omega_max])\n",
+    "plt.plot(omega_axis_old[:omega_max], np.abs(spectrum_old) ** (1 / 2), label = 'old')\n",
+    "plt.plot(omega_axis_new[:omega_max], np.abs(spectrum) ** (1 / 2), '--', label = 'new')\n",
     "plt.legend()\n",
     "plt.xlabel(r\"$\\hbar\\omega$\", fontsize=20)\n",
     "plt.ylabel(r\"$\\sigma(\\omega)$\", fontsize=25)\n",
