--- a/tutorials/3_adatom_dipole_transition.ipynb
+++ b/tutorials/3_adatom_dipole_transition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "806d3fa0",
+   "id": "157f9a1d",
    "metadata": {},
    "source": [
     "## Rabi Oscillations in an Adatom\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a4af42ec",
+   "id": "820d3516",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "98f30b4c",
+   "id": "078aafe2",
    "metadata": {},
    "source": [
     "We now include energies and coulomb interactions."
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b2370fd0",
+   "id": "3b730ad5",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9b88ca53",
+   "id": "5e35d0f3",
    "metadata": {},
    "source": [
     "Now, we visualize the initial state."
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "fa459eb6",
+   "id": "c94a4db7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "9ced51ae",
+   "id": "5c33a693",
    "metadata": {},
    "source": [
     "Now, we simulate its dynamics. We want to model an external x-polarized field. We want the orbitals to be connected by a dipole transition moment."
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "682efceb",
+   "id": "f41d4dc9",
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f57da256",
+   "id": "65c29185",
    "metadata": {},
    "source": [
     "The time evolution happens as usual (we again compare the old and new version), but we must supply the transition function as an additional argument."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6bd22dfa",
+   "id": "47fdc5ea",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -151,12 +151,13 @@
     "\n",
     "plt.plot( time_axis, occupations.real, '--', label = 'new' )\n",
     "plt.plot( time_axis, occupations_old.real, label = 'old' )\n",
-    "plt.legend()\n"
+    "plt.legend()\n",
+    "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "377fc665",
+   "id": "9c9f4f78",
    "metadata": {},
    "source": [
     "We see that the results dont quite line up? Why is this? We have to remember that the old solver is RK first order, so not too precise.\n",
@@ -166,7 +167,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f6d745af",
+   "id": "43821c53",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -183,7 +184,8 @@
     "\n",
     "plt.plot( time_axis, occupations.real, '--', label = 'new' )\n",
     "plt.plot( time_axis_high_res, occupations_old.real, label = 'old' )\n",
-    "plt.legend()"
+    "plt.legend()\n",
+    "plt.show()"
    ]
   }
  ],
