FIX: added variable solvers as argument to evolution

--- a/tutorials/2_absorption_graphene.ipynb
+++ b/tutorials/2_absorption_graphene.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "dc4a40ea",
+   "id": "4d38f89b",
    "metadata": {},
    "source": [
     "## Absorption spectrum of graphene nanoflakes\n",
@@ -17,13 +17,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1bead0ab",
+   "id": "2c06e20d",
    "metadata": {},
    "outputs": [],
    "source": [
     "import granad\n",
     "import jax.numpy as jnp\n",
     "import numpy as np\n",
+    "import diffrax\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "sb = granad.StackBuilder()\n",
@@ -57,7 +58,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2f265aa6",
+   "id": "2d01f1b8",
    "metadata": {},
    "source": [
     "We now define the electric field as an x-polarized pulse of frequency peaking at 2, with fwhm of 0.5."
@@ -66,7 +67,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "465c8360",
+   "id": "b003f811",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +82,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c170d86e",
+   "id": "ee5f3e8c",
    "metadata": {},
    "source": [
     "We assume the structure looses energy relaxing across all channels with a rate of 0.1"
@@ -90,7 +91,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b034302",
+   "id": "304a2eeb",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -99,16 +100,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8074fc42",
+   "id": "310c1a7a",
    "metadata": {},
    "source": [
-    "We propagate the structure in time. The function evolution returns a tuple. First is a new stack with its initial state given by the last state in the time evolution.  Second is a solution object provided by the diffrax library GRANAD uses for solving the underlying ODE with Dormand-Prince's 5/4 method and a PID controller for adapting the step size. It contains the density matrices, accessible via its attribute soltuion.ys. The saveat argument controls at which times we want to sample the density matrix. Here, we take it at all times, but for larger structures, a more sparse sampling grid is appropriate."
+    "We propagate the structure in time. The function evolution returns a tuple. First is a new stack with its initial state given by the last state in the time evolution.  Second is a solution object provided by the diffrax library GRANAD uses for solving the underlying ODE with Dormand-Prince's 5/4 method and a PID controller for adapting the step size. It contains the density matrices, accessible via its attribute soltuion.ys. The saveat argument controls at which times we want to sample the density matrix. "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9f21e5a2",
+   "id": "95d0c9f8",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -122,8 +123,7 @@
     "    field_func,\n",
     "    loss_function,\n",
     "    saveat = saveat,\n",
-    "    atol = 1e-10,\n",
-    "    rtol = 1e-10\n",
+    "    stepsize_controller = diffrax.PIDController(rtol=1e-10, atol=1e-10)\n",
     ")\n",
     "print( time.time() - start )\n",
     "# Unpack the solutions. sol.ys contains the density matrices stacked into an array of shape T x N x N, where T is the number of timesteps, N is the number of orbitals. We only need the diagonal elements for the occupation numbers."
@@ -132,7 +132,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0a94419e",
+   "id": "3c58c26c",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -142,7 +142,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "62fac452",
+   "id": "4f25046a",
    "metadata": {
     "lines_to_next_cell": 1
    },
@@ -160,7 +160,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b58ac1be",
+   "id": "3ced967c",
    "metadata": {},
    "source": [
     "We now plot the absorption "
@@ -169,7 +169,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7cd53372",
+   "id": "6f6ee709",
    "metadata": {},
    "outputs": [],
    "source": [
