--- a/tutorials/3_adatom_dipole_transition.ipynb
+++ b/tutorials/3_adatom_dipole_transition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "157f9a1d",
+   "id": "21303bac",
    "metadata": {},
    "source": [
     "## Rabi Oscillations in an Adatom\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "820d3516",
+   "id": "e3192618",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "078aafe2",
+   "id": "f2d7f13a",
    "metadata": {},
    "source": [
     "We now include energies and coulomb interactions."
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3b730ad5",
+   "id": "ad2c18ca",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e35d0f3",
+   "id": "b9f056d1",
    "metadata": {},
    "source": [
     "Now, we visualize the initial state."
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "c94a4db7",
+   "id": "487732c0",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5c33a693",
+   "id": "da4c5c28",
    "metadata": {},
    "source": [
     "Now, we simulate its dynamics. We want to model an external x-polarized field. We want the orbitals to be connected by a dipole transition moment."
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f41d4dc9",
+   "id": "39ed571f",
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "65c29185",
+   "id": "50281077",
    "metadata": {},
    "source": [
     "The time evolution happens as usual (we again compare the old and new version), but we must supply the transition function as an additional argument."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "47fdc5ea",
+   "id": "04a8943a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -131,8 +131,8 @@
     "    transition = transition_func,\n",
     ")\n",
     "\n",
-    "foo = jnp.einsum( 'ijk,kl,mj->iml', sol.ys, stack.eigenvectors, stack.eigenvectors.conj()  )\n",
-    "occupations = jnp.diagonal(foo, axis1=1, axis2=2)\n",
+    "density_matrices_new = jnp.einsum( 'ijk,kl,mj->iml', sol.ys, stack.eigenvectors, stack.eigenvectors.conj()  )\n",
+    "energy_occupations_new = jnp.diagonal(density_matrices_new, axis1=1, axis2=2)\n",
     "\n",
     "def to_energy_basis( rho ):\n",
     "    \"\"\"extract energy occupations from a density matrix\n",
@@ -141,7 +141,7 @@
     "\n",
     "# propagate in time\n",
     "time_axis = jnp.linspace(0, 10, 10**4)\n",
-    "_, occupations_old = granad.evolution_old(\n",
+    "_, energy_occupations_old = granad.evolution_old(\n",
     "    stack,\n",
     "    time_axis,\n",
     "    field_func,\n",
@@ -149,32 +149,32 @@
     "    postprocess = to_energy_basis\n",
     ")\n",
     "\n",
-    "plt.plot( time_axis, occupations.real, '--', label = 'new' )\n",
-    "plt.plot( time_axis, occupations_old.real, label = 'old' )\n",
+    "plt.plot( time_axis, energy_occupations_new.real, '--', label = 'new' )\n",
+    "plt.plot( time_axis, energy_occupations_old.real, label = 'old' )\n",
     "plt.legend()\n",
     "plt.show()\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "9c9f4f78",
+   "id": "0efebfba",
    "metadata": {},
    "source": [
-    "We see that the results dont quite line up? Why is this? We have to remember that the old solver is RK first order, so not too precise.\n",
+    "We see that the results dont quite line up, but why? We have to remember that the old solver is RK first order, so not too precise.\n",
     "Incresing the step size fixes the problem."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43821c53",
+   "id": "77000a36",
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "# propagate in time\n",
     "time_axis_high_res = jnp.linspace(0, 10, 10**5)\n",
-    "_, occupations_old = granad.evolution_old(\n",
+    "_, energy_occupations_old = granad.evolution_old(\n",
     "    stack,\n",
     "    time_axis_high_res,\n",
     "    field_func,\n",
@@ -182,8 +182,8 @@
     "    postprocess = to_energy_basis\n",
     ")\n",
     "\n",
-    "plt.plot( time_axis, occupations.real, '--', label = 'new' )\n",
-    "plt.plot( time_axis_high_res, occupations_old.real, label = 'old' )\n",
+    "plt.plot( time_axis, energy_occupations_new.real, '--', label = 'new' )\n",
+    "plt.plot( time_axis_high_res, energy_occupations_old.real, label = 'old' )\n",
     "plt.legend()\n",
     "plt.show()"
    ]
