REFACTOR, DOC: wrong name for rpa tut

--- a/tutorials/5_absorption_graphene_rpa.ipynb
+++ b/tutorials/5_absorption_graphene_rpa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "9fa738f7",
+   "id": "e0e7dbe5",
    "metadata": {},
    "source": [
     "## RPA-absorption spectrum of graphene nanoflakes\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "43dd6f93",
+   "id": "afaa26b3",
    "metadata": {
     "lines_to_next_cell": 0
    },
@@ -62,7 +62,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "01fb77c2",
+   "id": "1f351333",
    "metadata": {
     "lines_to_next_cell": 2
    },
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ef3e30",
+   "id": "37f7e976",
    "metadata": {},
    "source": [
     "We now compute the RPA absorption for an x-polarized uniform electric field. We do so by first computing the polarizability and then aking its imaginary part. Similar to the previous function, we have to tell GRANAD some parameters: a phenomennological broadening, coulomb strength scaling factor. In addition, we make it fast, but take a lot of memory with hungry = True. "
@@ -80,7 +80,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b420c4b4",
+   "id": "ba7ca734",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,8 @@
     "alpha = granad.rpa_polarizability_function( stack = stack, tau = tau, polarization = polarization, coulomb_strength=coulomb_strength, hungry = True )\n",
     "absorption = jax.lax.map( alpha, omegas ).imag * 4 * jnp.pi * omegas\n",
     "plt.plot( omegas, absorption )\n",
-    "plt.show()"
+    "plt.show()\n",
+    "#-"
    ]
   }
  ],
