DOC: fixed formatting in notebooks

--- a/tutorials/10_em_fields.ipynb
+++ b/tutorials/10_em_fields.ipynb
@@ -1,30 +1,27 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e4547203",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
-   "outputs": [],
+   "cell_type": "markdown",
+   "id": "4383d50a",
+   "metadata": {},
    "source": [
-    "# ## Spatially varying fields\n",
-    "#\n",
-    "# This example demonstrates how to include spatially varying fields.\n",
-    "#\n",
-    "# ### Set up the Stack\n",
-    "#\n",
-    "# We look at a small chain."
+    "## Spatially varying fields\n",
+    "\n",
+    "This example demonstrates how to include spatially varying fields.\n",
+    "\n",
+    "### Set up the Stack\n",
+    "\n",
+    "We look at a small chain."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f721e364",
+   "id": "bfeadf90",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import granad\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
@@ -60,16 +57,21 @@
     "sb.set_coulomb(coulomb_graphene)\n",
     "\n",
     "# create the stack object\n",
-    "stack = sb.get_stack( from_state = 0, to_state = 2)\n",
-    "#-\n",
-    "\n",
-    "# We now define two functions: a uniform vector potential and the e field it generates."
+    "stack = sb.get_stack( from_state = 0, to_state = 2)\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "03f780c7",
+   "metadata": {},
+   "source": [
+    "We now define two functions: a uniform vector potential and the e field it generates."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f7a9049e",
+   "id": "af72f8c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,19 +91,25 @@
     "# propagate in time\n",
     "gamma = 10\n",
     "time_axis = jnp.linspace(0, 10/gamma, int(1e8))\n",
-    "saveat = time_axis[::int(1e3)]\n",
-    "#-\n",
-    "\n",
-    "# For fields that can vary in space, it is important that you pass the vector potential as a function together with the arguent spatial = True."
+    "saveat = time_axis[::int(1e3)]\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b0acca93",
+   "metadata": {},
+   "source": [
+    "For fields that can vary in space, it is important that you pass the vector potential as a function together with the arguent spatial = True."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e22124fd",
+   "id": "9ea42c19",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# time propagation\n",
     "stack_new, sol = granad.evolution(\n",
     "    stack, time_axis, e_field_func, granad.relaxation(gamma),\n",
@@ -122,7 +130,7 @@
     "dipole_moment = granad.induced_dipole_moment(stack, occupations )\n",
     "plt.plot( saveat, dipole_moment, '--', label = 'A' )\n",
     "plt.legend()\n",
-    "plt.show()"
+    "plt.show()\n"
    ]
   }
  ],
