--- a/tutorials/7_multiple_excitations.ipynb
+++ b/tutorials/7_multiple_excitations.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "6b25782c",
+   "id": "6919e933",
    "metadata": {},
    "source": [
-    "Multiple electrons in the initially excited state\n",
+    "## Multiple electrons in the initially excited state\n",
     "\n",
     "This example demonstrates how to initially excite more than one electron. You can do this by passing lists to the arguements of get_stack."
    ]
@@ -13,7 +13,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "876b4811",
+   "id": "dc35ee63",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,8 +54,7 @@
     "\n",
     "# create the stack object with two excitations\n",
     "stack = sb.get_stack( from_state = [1,0], to_state = [2,4], excited_electrons = [2,1], doping = 0 )\n",
-    "print(stack.rho_0.diagonal() * stack.electrons, stack.homo)\n",
-    "#-"
+    "print(stack.rho_0.diagonal() * stack.electrons, stack.homo)"
    ]
   }
  ],
