--- a/tutorials/8_spin_orbitals.ipynb
+++ b/tutorials/8_spin_orbitals.ipynb
@@ -2,20 +2,18 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5a3f2e67",
+   "id": "172fc819",
    "metadata": {},
    "source": [
     "## Spin orbitals\n",
     "\n",
-    "This example demonstrates how to model spin orbitals in GRANAD. There are three differences to the default spin-polarized case: 1. you have to name the orbitals differently, e.g. pz_up and pz_down, 2. you leave one of it empty when adding it, 3. you pass spin_degenerate = False to get_stack.\n",
-    "\n",
-    "### Set up the Stack\n"
+    "This example demonstrates how to model spin orbitals in GRANAD. There are three differences to the default spin-polarized case: 1. you have to name the orbitals differently, e.g. pz_up and pz_down, 2. you leave one of it empty when adding it, 3. you pass spin_degenerate = False to get_stack.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9f15973",
+   "id": "238f5c3f",
    "metadata": {},
    "outputs": [],
    "source": [
