--- a/tutorials/11_saturation_functional.ipynb
+++ b/tutorials/11_saturation_functional.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "efa4959e",
+   "id": "9084ab86",
    "metadata": {},
    "source": [
     "## Saturation functional\n",
@@ -17,12 +17,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12813648",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "ecef3642",
+   "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "import granad\n",
     "\n",
     "import jax\n",
@@ -58,22 +57,12 @@
     "sb.set_coulomb(coulomb_graphene)\n",
     "\n",
     "# create the stack object\n",
-    "stack = sb.get_stack( from_state = 0, to_state = 2)"
+    "stack = sb.get_stack( from_state = 0, to_state = 2)\n"
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "b0f84052",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "e6687498",
+   "id": "391af2d2",
    "metadata": {},
    "source": [
     "We define the external illumination"
@@ -82,10 +71,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ee687981",
+   "id": "478f8ee3",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "amplitudes = [0.0, 0, 0]\n",
     "frequency = 1\n",
     "peak = 2\n",
@@ -94,16 +84,22 @@
     "# choose an x-polarized electric field propagating in z-direction\n",
     "field_func = granad.electric_field_pulse(\n",
     "    amplitudes, frequency, stack.positions[0, :], peak, fwhm\n",
-    ")\n",
-    "#-\n",
     "\n",
-    "# We inform GRANAD about the dissipation rates of different channels by defining a matrix gamma_matrix, where gamma_matrix[i,j] describes the transition rate from energy eigenstate i to j. In this way, we can also model gain, but we don't do this here."
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c713e241",
+   "metadata": {},
+   "source": [
+    "We inform GRANAD about the dissipation rates of different channels by defining a matrix gamma_matrix, where gamma_matrix[i,j] describes the transition rate from energy eigenstate i to j. In this way, we can also model gain, but we don't do this here."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "397426ed",
+   "id": "e6e2edb7",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,20 +111,25 @@
     "# allow transfer from higher energies to lower energies only if the\n",
     "# two energy levels are not degenerate\n",
     "diff = stack.energies[:,None] - stack.energies\n",
-    "gamma_matrix = gamma * jnp.logical_and( diff < 0, jnp.abs(diff) > stack.eps, )\n",
-    "\n",
-    "#-\n",
-    "\n",
-    "# We now propagate the stack in time. However, in contrast to the phenomenological relaxation functional, we now choose a saturation functional that turns of decay channels if the target level is completely occupied (occupation == 2 for spin-polarized analysis). We choose a smooth approximation to the Heavside function."
+    "gamma_matrix = gamma * jnp.logical_and( diff < 0, jnp.abs(diff) > stack.eps, )\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b9b3bf4d",
+   "metadata": {},
+   "source": [
+    "We now propagate the stack in time. However, in contrast to the phenomenological relaxation functional, we now choose a saturation functional that turns of decay channels if the target level is completely occupied (occupation == 2 for spin-polarized analysis). We choose a smooth approximation to the Heavside function."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d9e47562",
+   "id": "57772f3a",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "relaxation_function = granad.lindblad( stack, gamma_matrix.T, saturation = lambda x : 1/ ( 1 + jnp.exp( -1e6*(2.0 - x)) ) )\n",
     "\n",
     "# run the simulation and extract occupations with a suitable postprocessing function\n",
@@ -145,8 +146,7 @@
     "    plt.plot( saveat * gamma, stack.electrons * occ.real, label = round(stack.energies[i],2) )\n",
     "plt.legend()\n",
     "plt.show()\n",
-    "plt.close()\n",
-    "#-"
+    "plt.close()\n"
    ]
   }
  ],
