--- a/tutorials/5_absorption_graphene_rpa.ipynb
+++ b/tutorials/5_absorption_graphene_rpa.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "e0e7dbe5",
+   "id": "2befc212",
    "metadata": {},
    "source": [
     "## RPA-absorption spectrum of graphene nanoflakes\n",
@@ -17,10 +17,8 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "afaa26b3",
-   "metadata": {
-    "lines_to_next_cell": 0
-   },
+   "id": "c963ef43",
+   "metadata": {},
    "outputs": [],
    "source": [
     "import granad\n",
@@ -60,18 +58,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "1f351333",
-   "metadata": {
-    "lines_to_next_cell": 2
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
-   "id": "37f7e976",
+   "id": "b9b0b2a4",
    "metadata": {},
    "source": [
     "We now compute the RPA absorption for an x-polarized uniform electric field. We do so by first computing the polarizability and then aking its imaginary part. Similar to the previous function, we have to tell GRANAD some parameters: a phenomennological broadening, coulomb strength scaling factor. In addition, we make it fast, but take a lot of memory with hungry = True. "
@@ -80,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ba7ca734",
+   "id": "e1689104",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,8 +79,7 @@
     "alpha = granad.rpa_polarizability_function( stack = stack, tau = tau, polarization = polarization, coulomb_strength=coulomb_strength, hungry = True )\n",
     "absorption = jax.lax.map( alpha, omegas ).imag * 4 * jnp.pi * omegas\n",
     "plt.plot( omegas, absorption )\n",
-    "plt.show()\n",
-    "#-"
+    "plt.show()"
    ]
   }
  ],
