DOC: removed duplicate function

--- a/tutorials/3_adatom_dipole_transition.ipynb
+++ b/tutorials/3_adatom_dipole_transition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "21303bac",
+   "id": "c7c6126a",
    "metadata": {},
    "source": [
     "## Rabi Oscillations in an Adatom\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e3192618",
+   "id": "3f78d785",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2d7f13a",
+   "id": "c9c5bc6c",
    "metadata": {},
    "source": [
     "We now include energies and coulomb interactions."
@@ -42,7 +42,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ad2c18ca",
+   "id": "29952443",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b9f056d1",
+   "id": "a09a182c",
    "metadata": {},
    "source": [
     "Now, we visualize the initial state."
@@ -68,7 +68,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "487732c0",
+   "id": "174d31b1",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "da4c5c28",
+   "id": "301fdbd6",
    "metadata": {},
    "source": [
     "Now, we simulate its dynamics. We want to model an external x-polarized field. We want the orbitals to be connected by a dipole transition moment."
@@ -87,7 +87,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "39ed571f",
+   "id": "6ee90d8c",
    "metadata": {
     "lines_to_end_of_cell_marker": 2
    },
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "50281077",
+   "id": "d7a24f22",
    "metadata": {},
    "source": [
     "The time evolution happens as usual (we again compare the old and new version), but we must supply the transition function as an additional argument."
@@ -115,7 +115,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "04a8943a",
+   "id": "5c31d06d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,11 +134,6 @@
     "density_matrices_new = jnp.einsum( 'ijk,kl,mj->iml', sol.ys, stack.eigenvectors, stack.eigenvectors.conj()  )\n",
     "energy_occupations_new = jnp.diagonal(density_matrices_new, axis1=1, axis2=2)\n",
     "\n",
-    "def to_energy_basis( rho ):\n",
-    "    \"\"\"extract energy occupations from a density matrix\n",
-    "    \"\"\"\n",
-    "    return jnp.diag(stack.eigenvectors.conj().T @ rho @ stack.eigenvectors)\n",
-    "\n",
     "# propagate in time\n",
     "time_axis = jnp.linspace(0, 10, 10**4)\n",
     "_, energy_occupations_old = granad.evolution_old(\n",
@@ -146,7 +141,7 @@
     "    time_axis,\n",
     "    field_func,\n",
     "    transition = transition_func,\n",
-    "    postprocess = to_energy_basis\n",
+    "    postprocess = lambda r : granad.to_energy_basis(stack, r).diagonal()\n",
     ")\n",
     "\n",
     "plt.plot( time_axis, energy_occupations_new.real, '--', label = 'new' )\n",
@@ -157,7 +152,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0efebfba",
+   "id": "425b130a",
    "metadata": {},
    "source": [
     "We see that the results dont quite line up, but why? We have to remember that the old solver is RK first order, so not too precise.\n",
@@ -167,7 +162,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "77000a36",
+   "id": "9685fa38",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +174,7 @@
     "    time_axis_high_res,\n",
     "    field_func,\n",
     "    transition = transition_func,\n",
-    "    postprocess = to_energy_basis\n",
+    "    postprocess = lambda r : granad.to_energy_basis(stack, r).diagonal()\n",
     ")\n",
     "\n",
     "plt.plot( time_axis, energy_occupations_new.real, '--', label = 'new' )\n",
