DOC, REFACTOR: transition is attribute of stack, multipole operator
there is no need to define a separate transition function anymore

there is a way to compute in principle arbitrary electric multipole
operators

--- a/tutorials/3_adatom_dipole_transition.ipynb
+++ b/tutorials/3_adatom_dipole_transition.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "c7c6126a",
+   "id": "9d020550",
    "metadata": {},
    "source": [
     "## Rabi Oscillations in an Adatom\n",
@@ -17,7 +17,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3f78d785",
+   "id": "f0cbf13e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,19 +33,20 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c9c5bc6c",
+   "id": "2ce16440",
    "metadata": {},
    "source": [
-    "We now include energies and coulomb interactions."
+    "We now include energies and coulomb interactions. We want the orbitals to be connected by a dipole transition moment. NOTE THAT THIS HAS CHANGED: the transitions are now an attribute of the stack."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "29952443",
+   "id": "03b10c03",
    "metadata": {},
    "outputs": [],
    "source": [
+    "\n",
     "# onsite hopping\n",
     "sb.set_hopping(granad.SpotCoupling(orbital_id1=\"A\", orbital_id2=\"A\", coupling=0))\n",
     "sb.set_hopping(granad.SpotCoupling(orbital_id1=\"A\", orbital_id2=\"B\", coupling=1))\n",
@@ -54,12 +55,12 @@
     "# onsite coulomb\n",
     "sb.set_coulomb(granad.SpotCoupling(orbital_id1=\"A\", orbital_id2=\"A\", coupling=1))\n",
     "sb.set_coulomb(granad.SpotCoupling(orbital_id1=\"A\", orbital_id2=\"B\", coupling=1))\n",
-    "sb.set_coulomb(granad.SpotCoupling(orbital_id1=\"B\", orbital_id2=\"B\", coupling=1))"
+    "sb.set_coulomb(granad.SpotCoupling(orbital_id1=\"B\", orbital_id2=\"B\", coupling=1))\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "a09a182c",
+   "id": "6de8db2d",
    "metadata": {},
    "source": [
     "Now, we visualize the initial state."
@@ -68,54 +69,48 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "174d31b1",
+   "id": "5524fe5f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "stack = sb.get_stack( from_state = 0, to_state = 1)\n",
+    "stack = sb.get_stack( from_state = 0, to_state = 1, transitions = { (\"A\", \"B\") : [1., 0, 0.] } )\n",
     "# granad.show_energies(stack)"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "301fdbd6",
+   "id": "71a0c342",
    "metadata": {},
    "source": [
-    "Now, we simulate its dynamics. We want to model an external x-polarized field. We want the orbitals to be connected by a dipole transition moment."
+    "Now, we simulate its dynamics. We want to model an external x-polarized field."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6ee90d8c",
-   "metadata": {
-    "lines_to_end_of_cell_marker": 2
-   },
+   "id": "ec849ea8",
+   "metadata": {},
    "outputs": [],
    "source": [
     "amplitudes = [1, 0, 0]\n",
     "frequency = max(stack.energies) - min(stack.energies)\n",
     "field_func = granad.electric_field(\n",
     "    amplitudes, frequency, stack.positions[0, :]\n",
-    ")\n",
-    "\n",
-    "# transitions \n",
-    "transitions = { (\"A\", \"B\") : [1., 0, 0.] }\n",
-    "transition_func = granad.dipole_transitions(  transitions, stack )"
+    ")\n"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "d7a24f22",
+   "id": "907afb0f",
    "metadata": {},
    "source": [
-    "The time evolution happens as usual (we again compare the old and new version), but we must supply the transition function as an additional argument."
+    "The time evolution happens as usual (we again compare the old and new version)."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5c31d06d",
+   "id": "d3084f8e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -128,7 +123,6 @@
     "    stack,\n",
     "    time_axis,\n",
     "    field_func,    \n",
-    "    transition = transition_func,\n",
     ")\n",
     "\n",
     "density_matrices_new = jnp.einsum( 'ijk,kl,mj->iml', sol.ys, stack.eigenvectors, stack.eigenvectors.conj()  )\n",
@@ -140,7 +134,6 @@
     "    stack,\n",
     "    time_axis,\n",
     "    field_func,\n",
-    "    transition = transition_func,\n",
     "    postprocess = lambda r : granad.to_energy_basis(stack, r).diagonal()\n",
     ")\n",
     "\n",
@@ -152,7 +145,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "425b130a",
+   "id": "05fcb816",
    "metadata": {},
    "source": [
     "We see that the results dont quite line up, but why? We have to remember that the old solver is RK first order, so not too precise.\n",
@@ -162,7 +155,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9685fa38",
+   "id": "b4656715",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +166,6 @@
     "    stack,\n",
     "    time_axis_high_res,\n",
     "    field_func,\n",
-    "    transition = transition_func,\n",
     "    postprocess = lambda r : granad.to_energy_basis(stack, r).diagonal()\n",
     ")\n",
     "\n",
